Modernize CombinedIntervals comparator to lambda
Replaced anonymous Comparator with Comparator.comparing() method
reference syntax for improved readability and Java 24 conventions.

Changes:
- Collections.sort() with anonymous Comparator → allIntervals.sort()
  with Comparator.comparing(KeyInterval::getBegin)
  .thenComparing(KeyInterval::getEnd)
- allIntervals.get(0) → allIntervals.getFirst() (Java 21+)

All 32 leyden tests passed.

Fixes: Delos-1g8k