@@ -29,17 +29,10 @@ public class CombinedIntervals implements Predicate<Digest> {
         if (allIntervals.isEmpty()) {
             return;
         }
-        Collections.sort(allIntervals, new Comparator<KeyInterval>() {
-            @Override
-            public int compare(KeyInterval o1, KeyInterval o2) {
-                int comparison = o1.getBegin().compareTo(o2.getBegin());
-
-                return comparison == 0 // if both intervals begin the same
-                       ? o1.getEnd().compareTo(o2.getEnd()) // compare their ends
-                       : comparison;
-            }
-        });
-        KeyInterval current = allIntervals.get(0);
+        // if both intervals begin the same
+        // compare their ends
+        allIntervals.sort(Comparator.comparing(KeyInterval::getBegin).thenComparing(KeyInterval::getEnd));
+        KeyInterval current = allIntervals.getFirst();
         intervals.add(current);
         for (int i = 1; i < allIntervals.size(); i++) {
             KeyInterval next = allIntervals.get(i);
